<resources>
    <string name="app_name">RecipeSpace</string>
    <string name="loading">잠시만 기다려주세요.</string>
    <string name="dummy_text">
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate
    </string>
    <string-array name="title_array">
        <item>레시피 피드</item>
        <item>채팅 목록</item>
        <item>나의 정보</item>
    </string-array>
    <string name="title_about_us">앱의 정보</string>
    <string name="title_version">버전</string>
    <string name="version">1.0 Beta</string>
    <string name="title_copyright">저작권</string>
    <string name="copyright">Copyright © 2024 AppZiggy\n\nPowered by AppZiggy Software</string>
    <string name="title_setting">설정</string>
    <string name="subtitle_general_setting">일반</string>
    <string name="item_notice">공지사항</string>
    <string name="item_font">폰트</string>
    <string name="item_theme">테마</string>
    <string name="subtitle_notification_setting">알림</string>
    <string name="item_push_notification">푸시 알림 받기</string>
    <string name="subtitle_data_management_setting">데이터 관리</string>
    <string name="item_delete_cache">캐시 데이터 삭제</string>
    <string name="subtitle_others">기타</string>
    <string name="item_inquiry">문의하기</string>
    <string name="item_review">리뷰하기</string>
    <string name="item_open_source">오픈소스 라이센스</string>
    <string name="title_image_open_source">이미지</string>
    <string name="item01_image_open_source">flaticon</string>
    <string name="item02_image_open_source">Unsplash</string>
    <string name="title_open_source">오픈소스</string>
    <string name="item01_open_source">Google Material Design</string>
    <string name="item02_open_source">Firebase</string>
    <string name="item03_open_source">bumptech/glide (GitHub)</string>
    <string name="item04_open_source">android-image-picker:imagepicker (GitHub)</string>
    <string name="title_notice_list">공지사항</string>
    <string name="date_notice_item">날짜</string>
    <string name="title_notice_item">제목</string>
    <string name="first_notice_desc">안녕하세요. RecipeSpace에 오신 것을 환영합니다!</string>
    <string name="contact_recipe">문의하기</string>
    <string name="please_input_recipe_desc">레시피 내용을 입력해주세요</string>
    <string name="title_sign_up">회원가입</string>
    <string name="title_update_recipe">레시피 수정하기</string>
    <string name="btn_finish">완료</string>
    <string name="touch_here_and_add_pictures">카메라를 눌러 사진을 추가해주세요</string>
    <string name="add_pictures_count_limit">0/10</string>
    <string name="title_recipe_evaluation">레시피 평가</string>
    <string name="please_evaluate_recipe">레시피가 어땠는지 평가해주세요</string>
    <string name="cancel">취소</string>
    <string name="confirm_yes">확인</string>
    <string name="title_post_recipe">레시피 올리기</string>
    <string name="empty_recipe_list_found">레시피가 없어요…</string>
    <string name="no_searched_recipe_found">검색한 레시피가 없어요…</string>
    <string name="tv_finish">완료</string>
    <string name="please_input_message">메시지를 입력해 주세요</string>
    <string name="title_edit_profile">프로필 변경</string>
    <string name="splash_error_title">비정상 오류</string>
    <string name="splash_error_quit">종료</string>
    <string name="splash_error_message">error</string>
    <string name="login">로그인</string>
    <string name="please_login">로그인하고 RecipeSpace를 즐겨보세요!</string>
    <string name="do_you_not_have_account">가입하신 계정이 없나요?</string>
    <string name="empty_email">이메일을 입력해주세요</string>
    <string name="empty_password">패스워드를 입력해주세요</string>
    <string name="invalid_email_form">이메일 양식을 확인해주세요</string>
    <string name="invalid_password_length">비밀번호는 6자리 이상입니다</string>
    <string name="incorrect_password">입력한 패스워드와 다릅니다</string>
    <string name="duplicated_account">이미 존재하는 계정입니다.</string>
    <string name="failed_login">로그인에 실패했습니다. 다시 시도해주세요.</string>
    <string name="sign_up">회원가입</string>
    <string name="do_you_have_account">이미 계정이 있나요?</string>
    <string name="empty_user_name">사용자명을 입력해주세요</string>
    <string name="please_input_new_user_name">새로운 사용자 이름을 입력해주세요!</string>
    <string name="input_email">이메일</string>
    <string name="input_pwd">패스워드</string>
    <string name="input_pwd_confirm">패스워드 확인</string>
    <string name="failed_sign_up">회원가입에 실패했습니다.</string>
    <string name="input_user_name">사용자 이름</string>
    <string name="btn_sign_up">회원가입</string>
    <string name="btn_edit_profile">프로필 변경</string>
    <string name="btn_logout">로그아웃</string>
    <string name="chat_room_people_count">1</string>
    <string name="item_drop_out">탈퇴하기</string>
    <string name="to_bottom">맨 아래로</string>
    <string name="title_ai_chatbot">AI 챗봇에게 물어봐!</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="title_post_image">이미지 첨부</string>
    <string name="option_camera">카메라 촬영</string>
    <string name="option_gallery">앨범에서 찾기</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="service_policy">서비스 이용약관</string>
    <string name="privacy_policy_detail">
        \'RecipeSpace\'는 개인정보보호법에 따라 이용자들의 개인정보 보호 및 권익을 보호하고자 다음과 같은 처리방침을 두고 있습니다.
        \n
당사는 개인정보 처리방침을 개정하는 경우 앱 화면 및 웹사이트 공지사항을 통하여 공지할 것입니다.


        \n\n
1. 개인정보의 처리 목적 :

당사에서 개인정보를 별도로 저장하거나 이용하지 않습니다.


        \n\n
2. 개인정보 파일 현황
당사는 별도의 개인정보 파일을 사용하지 않으며 저장하지도 않습니다.

당사는 쿠키를 저장하지 않으며 이용하지 않습니다.

이용자가 이에 대해 의문이 있다면 해당 서비스(애플 및, 각 광고 미디어)로 직접 연락해야 합니다.


        \n\n
3.  개인정보의 처리 및 보유기간
당사는 개인정보를 직접적으로 저장하거나 보유하지 않습니다.

따라서 당사는 이용자의 개인정보를 처리하는 내용도 보유기간도 없습니다.


        \n\n
4. 개인정보의 제3자 제공에 관한 사항

당사는 개인정보를 제3자에게 제공하지 않고 있습니다.


        \n\n
5. 개인정보 처리 위탁

당사는 개인정보를 위탁하고 있지 않습니다.


        \n\n
6. 정보 주체의 권리, 의무 및 그 행사 방법

이용자는 개인정보 주체로서 권리 행사할 수 있습니다.
        \n
1) 개인정보 열람 요구
        \n
2) 오류 등이 있을 경우 정정 요구
        \n
3) 삭제 요구
        \n
4) 처리 정지 요구
        \n
당사는 개인정보를 저장하거나 위탁하지 않습니다.


        \n\n
7. 개인정보의 파기

당사의 애플리케이션은 독립 실행 방식의 애플리케이션으로 별도의 서버를 사용하지 않고 있습니다.

또한 개인정보를 저장하지 않으므로 파기할 것이 없습니다.

그러나 사용자가 원할 경우 애플리케이션을 \'삭제\'함으로서 모든 데이터를 파기할 수 있습니다.

        \n\n
8. 개인정보 보호책임자 작성

본 개인정보 처리 정책에 대해 궁금하신 사항이 있거나, 개인정보 처리 절차에 대한 질문, 의견 또는 우려가 있을 경우 아래 연락처로 연락 주시기 바랍니다.
        \n\n
이메일 : chs8275@gmail.com
    </string>
</resources>