<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleImageOpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_image_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/tvItem01ImageOpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/item01_image_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvItem02ImageOpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/item02_image_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvTitleOpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/title_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/tvItem01OpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/item01_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvItem02OpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/item02_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvItem03OpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/item03_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size" />

    <TextView
        android:id="@+id/tvItem04OpenSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/item04_open_source"
        android:textColor="@color/black"
        android:textSize="@dimen/body_text_size" />

</LinearLayout>