<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hero.recipespace.view.login.viewmodel.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background30"
        android:orientation="vertical"
        tools:context=".view.login.SignUpActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/title_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.email}"
                android:textSize="@dimen/body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_user_name"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.userName}"
                android:textSize="@dimen/body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.pwd}"
                android:textSize="@dimen/body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPwdConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pwd_confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.pwdConfirm}"
                android:textSize="@dimen/body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/btn_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/body_text_size"
            app:backgroundTint="@color/white"
            app:rippleColor="@color/colorPrimary" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="7"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/do_you_have_account"
                android:textColor="@color/black"
                android:textSize="@dimen/body_text_size"
                app:backgroundTint="@color/white"
                app:rippleColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body_text_size"
                android:textStyle="bold"
                app:backgroundTint="@color/white"
                app:rippleColor="@color/colorPrimary" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</layout>